--- a/src/app/quote-details/quote-details.component.html
+++ b/src/app/quote-details/quote-details.component.html
@@ -1,4 +1,5 @@
 <p>
   {{quote.authorName}}
 </p>
+<p>This quote is {{quote.creationDate|dateCount}} old</p>
 <button (click)="quoteDelete(true)">Delete Qoute</button>
