--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,7 +1,7 @@
 <h1>Awesome quotes</h1>
 <ul>
    <div *ngFor='let quote of quotes; let i = index'>
-      <li>{{quote.name}}</li>
+      <li>{{quote.name}} Created on {{quote.creationDate|date|uppercase}} </li>
       <button (click)="toggleDetails(i)">Toggle Details</button>
       <app-quote-details *ngIf = "quote.showAuthorName" [quote]='quote' (isRead) = 'deleteQuote($event,i)'></app-quote-details>
    </div>
